css/global.css
/* ... */
/* Font initialization */
@font-face {
	font-family: "DeltaFont";
	src: url("../assets/fonts/fnt_main.otf");
}
@font-face {
	font-family: "DeltaFont Tiny";
	src: url("../assets/fonts/fnt_noelletiny.otf");
}
@font-face {
	font-family: "DeltaFont Comic Sans";
	src: url("../assets/fonts/fnt_comicsans.otf");
}
@font-face {
	font-family: "DeltaFont Combat";
	src: url("../assets/fonts/fnt_dotumche.otf");
}
@font-face {
	font-family: "OpenDyslexic";
	src: url("../assets/fonts/OpenDyslexicMono-Regular.otf");
}
:root { /* Global colors and font */
	background-color: black;
	color: white;
	line-height: 1.5;

	--maxwidth: 992px;

	--red: #ff0000;
	--blue: #0000ff;
	--yellow: #ffff00;
	--green: #00ff00;
	--white: #fff;
	--black: #000;
	--purple: #800080;
	--maroon: #800000;
	--orange: #ffa040;
	/* Custom */
	--gray: #aaa;
	--lightyellow: #ffff80;

	/* Disable anti-aliasing to get that pixel look on all images
	Retrieved from https://forum.squarespace.com/topic/240034-how-to-disable-anti-aliasing-site-wide-for-pixel-art/ */
	image-rendering: optimizeSpeed;				/* STOP SMOOTHING, GIVE ME SPEED	*/
	image-rendering: -moz-crisp-edges;			/* Firefox							*/
	image-rendering: -o-crisp-edges;			/* Opera							*/
	image-rendering: -webkit-optimize-contrast;	/* Chrome (and eventually Safari)	*/
	image-rendering: pixelated;					/* Universal support since 2021		*/
	image-rendering: optimize-contrast;			/* CSS3 Proposed					*/
	-ms-interpolation-mode: nearest-neighbor;	/* IE8+								*/
}
h1, h2, h3, h4, h5, h6 { font-weight: normal }
h2, h3, h4, h5, h6 {
	margin-block: 0.7rem;
	&:first-child { margin-block-start: 0 }
	--adjacent-spacing: calc(var(--border-width) + 0.3rem);

	body:not(.compact) :is(d-box, d-choices) + & { margin-block-start: var(--adjacent-spacing) }
	body:not(.compact) &:has(+ d-box, + d-choices) { margin-block-end: var(--adjacent-spacing) }
}
h2 { font-size: 2em }
h3 { font-size: 1.6em }
h4 { font-size: 1.3em }
/* General text */
p, ul { margin-block: 0.5em }
li { margin-block: 0.2em }
p, ul, li {
	&:first-child { margin-block-start: 0 }
	&:last-child { margin-block-end: 0 }
}
p:empty {
	min-height: 1em;
	margin-block: 0;
}
a { /* Global links */
	color: var(--white);
	text-decoration: 0.1em solid underline;

	/* Yellow on hover */
	&:hover, &:focus-within { color: var(--lightyellow); }
}
hr {
	border-color: var(--gray);
	margin-block: 1em;
	--adjacent-spacing: calc(var(--border-width) + 1em);

	body:not(.compact) :is(d-box, d-choices) + & {
		margin-block-start: var(--adjacent-spacing);
	}
	body:not(.compact) &:has(+ d-box, + d-choices) {
		margin-block-end: var(--adjacent-spacing);
	}
}
/* #region Color-specific classes */
.cR, .red { color: var(--red) }
.cB, .blue { color: var(--blue) }
.cY, .yellow { color: var(--yellow) }
.cG, .green { color: var(--green) }
.cW, .white { color: var(--white) }
.cX, .black { color: var(--black) }
.cP, .purple { color: var(--purple) } /* unused */
.cM, .maroon { color: var(--maroon) } /* unused */
.cO, .orange { color: var(--orange) }
.cA { color: --#00aeff }
.cS { color: --#ff80ff }
.cV { color: --#80ff80 } /* unused */
.gray { color: var(--gray) }
.lightyellow { color: var(--lightyellow) }
/* Health bar colors */
.health.kris { color: #01ffff }
.health.susie { color: #ff00ff }
.health.ralsei { color: #01ff00 }
.health.noelle { color: #ffff00 }
/* Menu portait colors */
.menu.kris { color: #00a2e8 }
.menu.susie { color: #ea79c8 }
.menu.ralsei { color: #b5e61d }
.menu.noelle { color: #ffff00 } /*same as health bar*/
/* Picked off their Dark World sprites */
.kris { color: #75fbed }
.susie { color: #f883d7 }
.ralsei { color: #4dcc8e }
.noelle { color: #ffce32 } /* actually this one is Light World */
.berdly { color: #46b3fb }
.lancer, .king { color: #78ade1 } /* lightened for readability from #406080 */
.queen { color: #00a2e8 }
/* #endregion */
/* #endregion */

/* #region Accessibility */
#skip {
	/* Placement */
	position: fixed;
	top: calc(var(--border-width) + 0.5em);
	left: 50%;
	transform: translate(-50%);
	/* Display */
	border-image: url("../assets/images/textbox/light.png") 16 / var(--border-width) / var(--border-width);
	background-color: var(--black);
	line-height: 1;
	text-decoration: none;
	z-index: 5;

	&:hover, &:focus-within { color: var(--yellow) }

	&:not(:hover, :focus-within) { /* Place it above visible screen */
		transform: translate(-50%, calc(-100% - (2 * var(--border-width) + 1em)));
	}
}
.visually-hidden,
header.d-section:has(h1.visually-hidden:only-child) {
	position: fixed;
	top: -2em;
	left: 0;
	font-size: 1em;
	margin: 0 !important;
	padding: 0 !important;
}
#back404 {
	width: calc(100% - (2 * var(--border-width)));
	margin: var(--border-width);
	border-image: url("../assets/images/textbox/light.png") 16 / var(--border-width) / var(--border-width);
	background-color: var(--black);
	color: var(--white);
	font: inherit;
	text-align: center;
	cursor: pointer;

	&:hover, &:focus { color: var(--yellow) }
}
/* Settings */
#menu {
	position: fixed;
	bottom: 0;
	right: 0;
	z-index: 5;
	padding: min(0.75em, 2vmax);
	display: flex;
	flex-direction: column-reverse;
	align-items: flex-end;
}
#openmenu {
	color: inherit;
	font: inherit;
	border: none;
	padding: 0;
	background-color: transparent;
	width: fit-content;
	height: fit-content;
	cursor: pointer;

	&:is(:hover, :focus) .inactive, &:has(+ #menucontents:not([hidden])) .inactive,
	&:not(:hover, :focus, &:has(+ #menucontents:not([hidden]))) .active { display: none }
	img {
		display: block;
		height: 4em;
	}
}
/* ... */

